[update] play_view

--- a/play-abseil/BUILD
+++ b/play-abseil/BUILD
@@ -4,3 +4,10 @@ cc_binary(
     deps = ["@com_google_absl//absl/strings"],
     srcs = ["hello_world.cc"],
 )
+
+cc_binary(
+    name = "play_view",
+    deps = ["@com_google_absl//absl/strings",
+            "@com_google_absl//absl/status:statusor"],
+    srcs = ["play_view.cc"]
+)
