[multi] add coroutine

--- a/multiprocessing-book/Cargo.toml
+++ b/multiprocessing-book/Cargo.toml
@@ -36,3 +36,7 @@ path = "src/parallel_server.rs"
 [[bin]]
 name = "async_server"
 path = "src/async_server.rs"
+
+[[bin]]
+name = "coroutine"
+path = "src/coroutine.rs"
