--- a/multiprocessing-book/Cargo.toml
+++ b/multiprocessing-book/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 futures = "0.3.13"
 nix = "0.20.0"
+tokio = { version = "1.4.0", features = ["full"] }
 
 [[bin]]
 name = "mutex"
@@ -48,3 +49,7 @@ path = "src/coroutine_schedule.rs"
 [[bin]]
 name = "async_runtime"
 path = "src/async_runtime.rs"
+
+[[bin]]
+name = "async_tokio"
+path = "src/async_tokio.rs"
