[add] async typescript code

--- a/multiprocessing-book/.vscode/settings.json
+++ b/multiprocessing-book/.vscode/settings.json
@@ -9,4 +9,9 @@
         "-A",
         "clippy::needless_return"
     ],
+
+    // deno
+    "deno.enable": true,
+    "deno.lint": true,
+    "deno.unstable": true,
 }
