--- a/multiprocessing-book/Cargo.toml
+++ b/multiprocessing-book/Cargo.toml
@@ -53,3 +53,7 @@ path = "src/async_runtime.rs"
 [[bin]]
 name = "async_tokio"
 path = "src/async_tokio.rs"
+
+[[bin]]
+name = "green_main"
+path = "src/green_main.rs"
