--- a/multiprocessing-book/Cargo.toml
+++ b/multiprocessing-book/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 futures = "0.3.13"
 nix = "0.20.0"
+rand = "0.8.3"
 tokio = { version = "1.4.0", features = ["full"] }
 
 [[bin]]
