[add] implement ConsistentHash::hash

--- a/consistent-hash/lib/CMakeLists.txt
+++ b/consistent-hash/lib/CMakeLists.txt
@@ -1,2 +1,11 @@
 enable_testing()
 include(GoogleTest)
+
+## consistent_hash_test
+add_executable(consistent_hash_test
+    consistent_hash_test.cc
+)
+target_link_libraries(consistent_hash_test
+    GTest::gtest_main
+)
+gtest_discover_tests(consistent_hash_test)
