--- a/consistent-hash/.vscode/settings.json
+++ b/consistent-hash/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "files.associations": {
-        "memory": "cpp"
-    }
+    "editor.formatOnSave": true,
+    "editor.formatOnPaste": true,
+    "editor.formatOnType": true,
+    "C_Cpp.clang_format_style": "file",
 }
