[add] add_node,remove_node to DistributedKeyValueStore

--- a/consistent-hash/lib/CMakeLists.txt
+++ b/consistent-hash/lib/CMakeLists.txt
@@ -9,3 +9,12 @@ target_link_libraries(consistent_hash_test
     GTest::gtest_main
 )
 gtest_discover_tests(consistent_hash_test)
+
+## kv_store_test
+add_executable(kv_store_test
+    kv_store_test.cc
+)
+target_link_libraries(kv_store_test
+    GTest::gtest_main
+)
+gtest_discover_tests(kv_store_test)
