[add] a kvs sample code and test

--- a/consistent-hash/src/CMakeLists.txt
+++ b/consistent-hash/src/CMakeLists.txt
@@ -1,5 +1,10 @@
 include_directories(${PROJECT_SOURCE_DIR}/lib)
 
+## kvs
+add_executable(kvs
+    kvs.cc
+)
+
 ## main
 add_executable(main
     main.cc
