--- a/play-aws/pyproject.toml
+++ b/play-aws/pyproject.toml
@@ -9,6 +9,8 @@ packages = []
 [tool.poetry.dependencies]
 python = "^3.10"
 boto3 = "^1.34.131"
+requests = "^2.32.3"
+requests-toolbelt = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.6.1"
