--- a/rust-os/.cargo/config.toml
+++ b/rust-os/.cargo/config.toml
@@ -1,2 +1,6 @@
 [build]
-target = "thumbv7em-none-eabihf"
+target = "x86_64-blog_os.json"
+
+[unstable]
+build-std = ["core", "compiler_builtins"]
+build-std-features = ["compiler-builtins-mem"]
