--- a/systemd-sandbox/etc/systemd/system/tiny_httpd.service
+++ b/systemd-sandbox/etc/systemd/system/tiny_httpd.service
@@ -4,7 +4,8 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/python3 /usr/bin/tiny_httpd.py
+WorkingDirectory=/home/shota/repos/github.com/hedwig100/sandbox/systemd-sandbox
+ExecStart=/home/shota/.local/share/poetry/bin/poetry run python usr/bin/tiny_httpd.py
 
 [Install]
 WantedBy=multi-user.target
