[add] makes input std::string

--- a/flex-bison/.vscode/settings.json
+++ b/flex-bison/.vscode/settings.json
@@ -68,6 +68,7 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "*.y": "cpp"
+        "*.y": "cpp",
+        "*.ipp": "cpp"
     }
 }
