--- a/typescript-sandbox/package.json
+++ b/typescript-sandbox/package.json
@@ -14,7 +14,9 @@
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "jest": "^30.1.3",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "ts-jest": "^29.4.4"
   }
 }
