--- a/typescript-sandbox/package.json
+++ b/typescript-sandbox/package.json
@@ -7,6 +7,9 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "start:dev": "tsc --watch",
+    "build": "npx tsc",
+    "start": "node ./dist/index.js",
     "test": "jest",
     "format": "prettier --write **/*.{js,ts,tsx}"
   },
@@ -15,6 +18,7 @@
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.5.2",
     "jest": "^30.1.3",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.4"
