--- a/play-ts/sandbox2/package.json
+++ b/play-ts/sandbox2/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3"
   }
 }
