--- a/play-ts/sandbox2/tsconfig.json
+++ b/play-ts/sandbox2/tsconfig.json
@@ -14,7 +14,9 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "target": "ES2020",
-    "types": [],
+    "types": [
+      "node"
+    ],
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
