--- a/play-ts/sandbox2/package.json
+++ b/play-ts/sandbox2/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "tsup",
     "start": "node dist/main.js",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
