--- a/play-ts/sandbox2/package.json
+++ b/play-ts/sandbox2/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/main.js",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "lint": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
