--- a/llamaindex-sandbox/pyproject.toml
+++ b/llamaindex-sandbox/pyproject.toml
@@ -11,4 +11,5 @@ dependencies = [
     "llama-index-embeddings-google-genai>=0.3.1",
     "llama-index-embeddings-vertex>=0.4.1",
     "llama-index-llms-gemini>=0.6.1",
+    "llama-index-vector-stores-chroma>=0.5.3",
 ]
